--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,66 +1,66 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
-
-    defaultConfig {
-        applicationId "com.example.naoscient"
-        minSdkVersion 16
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
-	 vectorDrawables.useSupportLibrary = true
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
+	buildToolsVersion "30.0.2"
+	compileSdkVersion 30
 
 	compileOptions {
 		sourceCompatibility = 1.8
 		targetCompatibility = 1.8
 	}
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
+	buildTypes {
+		release {
+			minifyEnabled false
+			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+		}
+	}
+
+	defaultConfig {
+		applicationId "com.example.naoscient"
+		minSdkVersion 26
+		targetSdkVersion 30
+		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+		versionCode 1
+		versionName "1.0"
+		vectorDrawables.useSupportLibrary = true
+	}
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+	annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
 
-		implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
+	implementation fileTree(dir: "libs", include: ["*.jar"])
+	implementation "androidx.appcompat:appcompat:$rootProject.appCompatVersion"
+	implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
+	implementation "androidx.fragment:fragment:1.2.0"
+	implementation "androidx.lifecycle:lifecycle-common-java8:$rootProject.lifecycleVersion"
+	implementation "androidx.lifecycle:lifecycle-livedata:$rootProject.lifecycleVersion"
+	implementation "androidx.lifecycle:lifecycle-viewmodel:$rootProject.lifecycleVersion"
+	implementation "androidx.room:room-runtime:$rootProject.roomVersion"
+	implementation "com.google.android.material:material:$rootProject.materialVersion"
+	implementation 'androidx.appcompat:appcompat:1.1.0'
+	implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+	implementation 'androidx.navigation:navigation-fragment:2.1.0'
+	implementation 'androidx.navigation:navigation-ui:2.1.0'
+	implementation 'com.google.android.material:material:1.0.0'
 
-		// Dependencies for working with Architecture components
-		// You'll probably have to update the version numbers in build.gradle (Project)
-
-		// Room components
-		implementation "androidx.room:room-runtime:$rootProject.roomVersion"
-		annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
-		androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
-
-		// Lifecycle components
-		implementation "androidx.lifecycle:lifecycle-viewmodel:$rootProject.lifecycleVersion"
-		implementation "androidx.lifecycle:lifecycle-livedata:$rootProject.lifecycleVersion"
-		implementation "androidx.lifecycle:lifecycle-common-java8:$rootProject.lifecycleVersion"
-
-		// UI
-		implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
-		implementation "com.google.android.material:material:$rootProject.materialVersion"
-
-		// Testing
-		testImplementation "junit:junit:$rootProject.junitVersion"
-		androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
-		androidTestImplementation ("androidx.test.espresso:espresso-core:$rootProject.espressoVersion", {
+	androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
+	androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
+	androidTestImplementation (
+		"androidx.test.espresso:espresso-core:$rootProject.espressoVersion", {
 			exclude group: 'com.android.support', module: 'support-annotations'
 		})
-		androidTestImplementation "androidx.test.ext:junit:$rootProject.androidxJunitVersion"
+	androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+	androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+	androidTestImplementation "androidx.test.ext:junit:$rootProject.androidxJunitVersion"
 
+	testImplementation "junit:junit:$rootProject.junitVersion"
+	testImplementation 'junit:junit:4.12'
+}
+
+task formatSource(type: JavaExec) {
+	classpath = files("${buildDir}/intermediates/javac/release/classes")
+	group = "Execution"
+	main = 'com.naoscient.tools.SourceFormatter'
 }
