--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.naoscient">
     <application
         android:allowBackup="true"
@@ -6,14 +7,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme"
+	>
+        <activity
+			android:label="@string/home"
+			android:name=".MainActivity"
+		>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddPersonActivity"></activity>
+
+        <activity
+			android:label="@string/add_person"
+			android:name=".AddPersonActivity"
+		>
+		</activity>
     </application>
 </manifest>
